<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wilderarias.formularioderegistro.MainActivityPunto2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tUsername"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:text="@string/userName"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|end"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eUserName"
                android:maxLength="20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tPassw1"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:text="@string/passw1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="end|center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eUserPassw1"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tPassw2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/passw2"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eUserPassw2"
                android:maxLength="20"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tEmail"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:text="@string/correo"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|end"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eCorreo"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:text="@string/sex"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center|end"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rMale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:id="@+id/rFemale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tDate"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:text="@string/fechaNaci"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="end|center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tFechaNaci"
                android:onClick="fechaNacimiento"
                android:text="@string/mosFechaNaci"
                android:textSize="20sp"
                android:windowSoftInputMode="stateHidden"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tCity"
                android:layout_width="157dp"
                android:layout_height="match_parent"
                android:text="@string/lugarNaci"
                android:textColor="@color/black"
                android:gravity="center|end"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sCiudades"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="10"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/hobbies"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center|end"
                android:layout_marginRight="3dp"/>
            <CheckBox
                android:id="@+id/cRead"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/read"/>
            <CheckBox
                android:id="@+id/cSwim"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/swim"/>
            <CheckBox
                android:id="@+id/cSleep"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/sleep"/>
            <CheckBox
                android:id="@+id/csing"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/sing"/>
        </LinearLayout>

        <Button
            android:id="@+id/bAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:background="@color/colorAccent"
            android:onClick="registrar"/>

        <TextView
            android:id="@+id/tData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>


</ScrollView>
